fix: overflow hidden on body

--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ h2 {
   z-index: -2;
   /* background-color: red; */
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .scrolly {
   scroll-behavior: smooth;
